[tool.poetry]
name = "spectronet"
version = "0.1.0"
description = "Deep neural network for gamma-ray spectrum deconvolution"
authors = ["nikitinale <nikitinale@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
pandas = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
